# SolarNow

./: CMakeLists.txt  LICENSE  README.en.md  README.md  ico.aps  icon.rc
SolarGL/: CmakeLists.txt  SolarGL.cpp  SolarGL.h
application/: Application.cpp  Application.h  CmakeLists.txt
blender/: earth_day.blend  earth_day.blend1
include/: SolarGL.h  model.h
include/glad/: glad.h
lib/: SolarGL.lib
model/: .african_head.obj.swp  .test.cpp.swp
src/: glad.c  main.cpp  model - 副本.cpp
tgaimage/: CmakeLists.txt
